# PokerTH-Tracker

./: .gitignore  CMakeLists.txt  Icons.qrc  PlayerStat.cpp  PlayerStat.hpp  PokerTH_tracker.desktop  PokerTH_tracker.pro  README.md  README.txt  Trans_cmake.qrc  Trans_qmake.qrc  analysis_widget.cpp  analysis_widget.hpp  global.cpp  global.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  multiview.cpp  multiview.hpp
Lang/: PokerTH_tracker_de.ts
misc/: version.hpp.in  win_build.sh
src/: PlayerStat.cpp  PlayerStat.hpp  analysis_widget.cpp  analysis_widget.hpp  global.cpp  global.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  multiview.cpp  multiview.hpp  notes_stars.cpp  notes_stars.hpp  worker.cpp  worker.hpp
